--- a/WebApplicationEXAM_N1/Views/Shared/_Layout.cshtml
+++ b/WebApplicationEXAM_N1/Views/Shared/_Layout.cshtml
@@ -1,32 +1,123 @@
-﻿<!DOCTYPE html>
+﻿@using WebApplicationEXAM_N1.Helpers
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebApplicationEXAM_N1</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplicationEXAM_N1.styles.css" asp-append-version="true" />
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebApplicationEXAM_N1</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b>LSD Shop</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <li class="nav-item ms-1">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                     </ul>
+
+                    <form action="/Product/GetProduct" method="get">
+                        <ul class="navbar-nav gap-1 align-items-center">
+                            <li class="nav-item mx-1">
+                                <select class="form-select" name="searchBy">
+                                    <option selected value="">Шукати за</option>
+                                    <option value="title">Назвою</option>
+                                    <option value="price">Ціною</option>
+                                    <option value="rating">Рейтинг</option>
+                                </select>
+                            </li>
+                            <li class="nav-item mx-1">
+                                <input id="searchInput" type="text" class="form-control" name="value" />
+                            </li>
+                            <li class="nav-item mx-1 me-4">
+                                <button class="btn btn-outline-primary" type="submit">Search</button>
+                            </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        </ul>
+                    </form>
+
+                    <div class="d-flex align-items-center justify-content-between ">
+                        <div class="nav-item d-flex">
+                            <a href="/Cart/">
+                            <button 
+                            class="btn position-relative me-3 bg-secondary bg-opacity-50 rounded-circle d-flex align-items-center justify-content-center "
+                            style="width: 35px; height: 35px">
+                                <i class="bi bi-cart"></i>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary">1</span>
+								</button>
+							</a>
+                        </div>
+
+                        <div class="nav-item dropdown">
+                            <button type="button"
+                            class="btn btn-outline-primary rounded-circle d-flex align-items-center justify-content-center nav-item dropdown my-1"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                            style="width: 35px; height: 35px">
+                                <i class="bi bi-person fs-5 "></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                @{
+                                    if (AuthorizeHelper.CurrentLogingUserToken == string.Empty)
+                                    {
+                                        <li>
+                                            <a class="dropdown-item " asp-area="" asp-controller="Authorize" asp-action="Register"><i class="bi bi-pen"> </i>Реєстрація</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item " asp-area="" asp-controller="Authorize" asp-action="Index"><i class="bi bi-lock"> </i>Логін</a>
+                                        </li>
+                                    }
+                                    else{
+                                        <li>
+                                            <a class="dropdown-item " asp-area="" asp-controller="Authorize" asp-action="Logout"><i class="bi bi-box-arrow-left"> </i>Вихід</a>
+                                    </li>
+
+                                    }
+                                   
+                                }
+                            </ul>
+                        </div>
+                    </div>
+
+
                 </div>
+
+                   
+
+
+                    
+
+
+
+                
             </div>
         </nav>
     </header>
@@ -38,7 +129,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - WebApplicationEXAM_N1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Магазин з продуктами "LSD Shop" @* <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
